--- a/modules/commission_insurance/view/plan_form.xml
+++ b/modules/commission_insurance/view/plan_form.xml
@@ -7,10 +7,12 @@
     <xpath expr="/form/field[@name='lines']" position="replace">
         <notebook colspan="4">
             <page name="lines">
-                <field name="lines" colspan="2" view_ids="commission.plan_line_view_list_sequence"/>
+                <field name="lines" colspan="4" view_ids="commission.plan_line_view_list_sequence"/>
+            </page>
+            <page name="commissioned_products">
                 <field name="commissioned_products"/>
             </page>
-            <page id="admin" string="Administration">
+            <page name="tags">
                 <field name="tags"/>
             </page>
         </notebook>
