commission_insurance_rule_engine: Add extra data on agent to be used with the rule engine Fix #1746 review: http://rietveld.coopengo.com/7900001/

--- a/modules/commission_insurance/view/plan_form.xml
+++ b/modules/commission_insurance/view/plan_form.xml
@@ -11,7 +11,7 @@
                 <field name="commissioned_products"/>
             </page>
             <page id="admin" string="Administration">
-                <field name="tags"/>
+                <field name="tags" colspan="2"/>
             </page>
         </notebook>
     </xpath>
