endorsement : use rtf for summary, split info generation and formatting fix #1772 fix #1773 http://rietveld.coopengo.com/11350001/

--- a/modules/endorsement/view/endorsement_form.xml
+++ b/modules/endorsement/view/endorsement_form.xml
@@ -14,7 +14,7 @@
     <group id="endorsements" colspan="2" yexpand="1" yfill="1">
         <field name="contract_endorsements"/>
     </group>
-    <field name="endorsement_summary" colspan="2"/>
+    <field name="endorsement_summary" colspan="2" widget="richtext"/>
     <newline/>
     <group id="application" colspan="4">
         <group id="application_buttons" yfill="1">
