commission_insurer: Limit date for insurer commission Fix #1489 review: http://rietveld.coopengo.com/7920001/

--- a/modules/commission_insurer/view/commission_create_invoice_principal_ask_form.xml
+++ b/modules/commission_insurer/view/commission_create_invoice_principal_ask_form.xml
@@ -9,5 +9,7 @@
     <field name="description" yfill="0" yexpand="0"/>
     <label name="post_invoices"/>
     <field name="post_invoices"/>
+    <label name="until_date"/>
+    <field name="until_date"/>
     <field name="insurers" colspan="4"/>
 </form>
