all : fix states and colors attributes in xml files for 1.4 fix #1864 http://rietveld.coopengo.com/11400001/

--- a/modules/bank_cog/view/party_form.xml
+++ b/modules/bank_cog/view/party_form.xml
@@ -5,7 +5,7 @@
         <field name="is_bank" xexpand="0" width="25"/>
     </xpath>
     <xpath expr="/form/notebook/page[@id='role']/notebook" position="inside">
-        <page id="bank" string="Bank" states="{'invisible': Bool(~Eval('is_bank'))}">
+        <page id="bank" string="Bank">
             <field name="bank_role" mode="form"/>
         </page>
     </xpath>
