--- a/modules/contract_insurance/view/extra_premium_form.xml
+++ b/modules/contract_insurance/view/extra_premium_form.xml
@@ -9,11 +9,11 @@
     <field name="calculation_kind"/>
     <label name="flat_amount"/>
     <group id="flat_amounts" col="99">
-        <group id="flat_amount_discount" states="{'invisible': Or(Eval('calculation_kind') != 'flat', ~Eval('is_discount'))}">
+        <group id="flat_amount_discount">
             <field name="flat_amount" xexpand="0" factor="-1"/>
             <label name="currency_symbol" string="" xexpand="1" xalign="0"/>
         </group>
-        <group id="flat_amount" states="{'invisible': Or(Eval('calculation_kind') != 'flat', Bool(Eval('is_discount')))}">
+        <group id="flat_amount">
             <field name="flat_amount" xexpand="0"/>
             <label name="currency_symbol" string="" xexpand="1" xalign="0"/>
         </group>
@@ -21,11 +21,11 @@
     <newline/>
     <label name="rate"/>
     <group id="rates" col="99">
-        <group id="rate_discount" states="{'invisible': Or(Eval('calculation_kind') != 'rate', ~Eval('is_discount')) }">
+        <group id="rate_discount">
             <field name="rate" xexpand="0" factor="-100"/>
             <label string="%" id="rate" xexpand="1" xalign="0"/>
         </group>
-        <group id="rate" states="{'invisible': Or(Eval('calculation_kind') != 'rate', Bool(Eval('is_discount')))}">
+        <group id="rate">
             <field name="rate" xexpand="0" factor="100"/>
             <label string="%" id="rate" xexpand="1" xalign="0"/>
         </group>
@@ -41,7 +41,7 @@
     <label name="end_date"/>
     <field name="end_date"/>
     <newline/>
-    <group id="invisible" states="{'invisible': True}">
+    <group id="invisible">
         <field name="currency"/>
         <field name="is_discount"/>
     </group>
