--- a/modules/endorsement_insurance/view/manage_extra_premium_form.xml
+++ b/modules/endorsement_insurance/view/manage_extra_premium_form.xml
@@ -5,7 +5,7 @@
     <label name="effective_date"/>
     <field name="effective_date"/>
     <field name="extra_premiums" colspan="4" expand_toolbar="0"/>
-    <group id="invisible" states="{'invisible': True}">
+    <group id="invisible">
         <field name="endorsement_part"/>
     </group>
 </form>
