--- a/modules/loan/view/extra_premium_form.xml
+++ b/modules/loan/view/extra_premium_form.xml
@@ -5,7 +5,7 @@
         <label name="capital_per_mil_rate"/>
         <group id="capital_per_mil">
             <field name="capital_per_mil_rate" xexpand="0" factor="1000"/>
-            <label string="‰" id="capital_per_mil_rate" xexpand="1" xalign="0" states="{'invisible': Eval('calculation_kind') != 'capital_per_mil'}"/>
+            <label string="‰" id="capital_per_mil_rate" xexpand="1" xalign="0"/>
         </group>
     </xpath>
     <xpath expr="/form" position="inside">
