--- a/modules/benefit/view/rule_stage_form.xml
+++ b/modules/benefit/view/rule_stage_form.xml
@@ -13,14 +13,14 @@
     <label name="config_kind"/>
     <field name="config_kind" xexpand="0"/>
     <newline/>
-    <group id="amount" states="{'invisible': Eval('config_kind') != 'simple'}" colspan="2" xexpand="0">
+    <group id="amount" colspan="2" xexpand="0">
         <label name="amount"/>
         <field name="amount"/>
         <label name="indemnification_calc_unit" xexpand="0"/>
         <field name="indemnification_calc_unit" xalign="0"/>
     </group>
     <newline/>
-    <group id="rule" states="{'invisible': Eval('config_kind') != 'advanced'}" colspan="2" xexpand="0">
+    <group id="rule" colspan="2" xexpand="0">
         <label name="rule"/>
         <field name="rule"/>
         <label name="rule_extra_data"/>
