--- a/modules/commission_insurance/view/party_form.xml
+++ b/modules/commission_insurance/view/party_form.xml
@@ -5,7 +5,7 @@
         <field name="is_broker" xexpand="0" width="25"/>
     </xpath>
     <xpath expr="/form/notebook/page[@id='role']/notebook" position="inside">
-        <page id="broker" string="Broker Agents" states="{'invisible': Bool(~Eval('is_broker'))}">
+        <page id="broker" string="Broker Agents">
             <field name="agents" colspan="4"/>
         </page>
     </xpath>
