--- a/modules/contract_cash_value/view/contract_form.xml
+++ b/modules/contract_cash_value/view/contract_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook/page[@id='cov_elements']" position="after">
-        <page string="Cash Value Collections" id="cash_value_collections" states="{'invisible': ~Eval('is_cash_value')}">
+        <page string="Cash Value Collections" id="cash_value_collections">
             <field name="cash_value_collections" colspan="4"/>
             <field name="is_cash_value" invisible="1"/>
         </page>
