--- a/modules/contract_insurance_invoice/view/premium_notice_view_list.xml
+++ b/modules/contract_insurance_invoice/view/premium_notice_view_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<tree string="Premium Notices" colors="If(Eval('state') == 'paid', 'green', If(Eval('state') == 'cancel', 'grey', If(Eval('amount_to_pay_today', 0) > 0, 'red', If(Eval('state') == 'posted', 'blue', 'black'))))">
+<tree string="Premium Notices">
     <field name="state" icon="icon"/>
     <field name="number"/>
     <field name="start"/>
