--- a/modules/contract_life_clause/view/option_form.xml
+++ b/modules/contract_life_clause/view/option_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/notebook" position="inside">
-        <page name="beneficiary_clause" states="{'invisible': ~Eval('has_beneficiary_clause')}">
+        <page name="beneficiary_clause">
             <label name="beneficiary_clause"/>
             <field name="beneficiary_clause"/>
             <field name="customized_beneficiary_clause" colspan="4"/>
