--- a/modules/distribution/view/party_form.xml
+++ b/modules/distribution/view/party_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/notebook" position="inside">
-        <page name="network" states="{'invisible': ~Eval('network')}">
+        <page name="network">
             <field name="network" mode="form"/>
         </page>
     </xpath>
