--- a/modules/endorsement_party/view/party_form.xml
+++ b/modules/endorsement_party/view/party_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form" position="inside">
-        <group id="endorsement_buttons" string="" states="{'invisible': True}">
+        <group id="endorsement_buttons" string="">
             <newline/>
             <button name="start_endorsement" string="Start Endorsement"/>
         </group>
