--- a/modules/offered_cash_value/view/option_description_form.xml
+++ b/modules/offered_cash_value/view/option_description_form.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook/page/notebook" position="inside">
-        <page string="Cash Value" id="cash_value" states="{'invisible': Eval('family') != 'cash_value'}">
+        <page string="Cash Value" id="cash_value">
             <field name="cash_value_rules" colspan="4"/>
         </page>
     </xpath>
     <xpath expr="/form/notebook/page/notebook/page[@id='coverage_amount']" position="replace_attributes">
-        <page string="Coverage Amount" id="coverage_amount" states="{'invisible': Not(In(Eval('family'), ['cash_value', 'life']))}"/>
+        <page string="Coverage Amount" id="coverage_amount"/>
     </xpath>
 </data>
