--- a/modules/offered_insurance/view/party_form.xml
+++ b/modules/offered_insurance/view/party_form.xml
@@ -5,7 +5,7 @@
         <field name="is_insurer" xexpand="0" width="25"/>
     </xpath>
     <xpath expr="/form/notebook/page[@id='role']/notebook" position="inside">
-        <page id="insurer" string="Insurer" states="{'invisible': Bool(~Eval('is_insurer'))}">
+        <page id="insurer" string="Insurer">
             <field name="insurer_role" mode="form"/>
         </page>
     </xpath>
