--- a/modules/offered_life/view/option_description_form.xml
+++ b/modules/offered_life/view/option_description_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook/page[@id='managers']/notebook" position="inside">
-        <page string="Coverage Amount" id="coverage_amount" states="{'invisible': Eval('family') != 'life'}">
+        <page string="Coverage Amount" id="coverage_amount">
             <field name="coverage_amount_rules"/>
         </page>
     </xpath>
