--- a/modules/rule_engine/view/rule_engine_tree.xml
+++ b/modules/rule_engine/view/rule_engine_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<tree string="Rules" colors="If(~Eval('passing_test_cases' , False) | Bool(Eval('debug_mode')), 'red', 'black')">
+<tree string="Rules">
     <field name="type_"/>
     <field name="name"/>
     <field name="status"/>
