--- a/modules/task_manager/view/process_log_launchable_list.xml
+++ b/modules/task_manager/view/process_log_launchable_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Current Tasks" keyword_open="1" colors="If(Bool(Eval('locked')), 'red', If(Bool(Eval('is_current_user')), 'blue', 'black'))">
+<tree string="Current Tasks" keyword_open="1">
     <field name="user"/>
     <field name="start_time_str"/>
     <field name="to_state"/>
