--- a/modules/endorsement_premium/view/preview_contract_premiums_form.xml
+++ b/modules/endorsement_premium/view/preview_contract_premiums_form.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <form string="Preview Contracts Premiums">
-    <group id="one_contract" string="">
+    <group id="one_contract" string="" yexpand="1" yfill="1">
         <field name="contract_previews" mode="form" expand_toolbar="0"/>
     </group>
-    <group id="multiple_contract" string="">
+    <group id="multiple_contract" string="" yexpand="1" yfill="1">
         <field name="contract_previews" mode="tree,form"/>
     </group>
 </form>
