contract_insurance : update end_date of extra_premium with duration fix #1857 http://rietveld.coopengo.com/14170001/

--- a/modules/contract_insurance/view/extra_premium_form.xml
+++ b/modules/contract_insurance/view/extra_premium_form.xml
@@ -31,6 +31,8 @@
         </group>
     </group>
     <newline/>
+    <label name="time_limited"/>
+    <field name="time_limited"/>
     <label name="duration"/>
     <group id="duration">
         <field name="duration" xexpand="0"/>
