commission : rename commissionned to commissioned http://rietveld.coopengo.com/8990001/

--- a/modules/commission_insurance/view/commission_form.xml
+++ b/modules/commission_insurance/view/commission_form.xml
@@ -2,9 +2,9 @@
 <data>
     <xpath expr="/form/field[@name='origin']" position="after">
         <newline/>
-        <label name="commissionned_contract"/>
-        <field name="commissionned_contract"/>
-        <label name="commissionned_option"/>
-        <field name="commissionned_option"/>
+        <label name="commissioned_contract"/>
+        <field name="commissioned_contract"/>
+        <label name="commissioned_option"/>
+        <field name="commissioned_option"/>
     </xpath>
 </data>
