--- a/modules/commission_insurance/view/commission_list.xml
+++ b/modules/commission_insurance/view/commission_list.xml
@@ -4,8 +4,8 @@
         <field name="party"/>
     </xpath>
     <xpath expr="/tree" position="inside">
-        <field name="commissionned_contract"/>
-        <field name="commissionned_option"/>
+        <field name="commissioned_contract"/>
+        <field name="commissioned_option"/>
         <field name="broker" tree_invisible="1"/>
     </xpath>
     <xpath expr="/tree/field[@name='currency']" position="replace"/>
