contract_insurance_invoice: Allow to define premium with tax included Fix #1836: https://redmine.coopengo.com/issues/1836 http://rietveld.coopengo.com/16050001

--- a/modules/contract_insurance_invoice/view/option_description_form.xml
+++ b/modules/contract_insurance_invoice/view/option_description_form.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 <data>
+    <xpath expr="/form/notebook/page[@id='managers']/notebook/page[@id='premium_data']/field[@name='premium_rules']" position="before">
+        <label name="taxes_included_in_premium"/>
+        <field name="taxes_included_in_premium"/>
+        <newline/>
+    </xpath>
     <xpath expr="/form/notebook/page[@id='admin']/group[@id='left']/field[@name='currency']" position="after">
         <label name="account_for_billing"/>
         <field name="account_for_billing"/>
