--- a/modules/contract_insurance_invoice/view/product_form.xml
+++ b/modules/contract_insurance_invoice/view/product_form.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0"?>
 <data>
+    <xpath expr="/form/notebook/page[@id='managers']/notebook/page[@id='premium_data']/separator[@name='premium_dates']" position="before">
+        <label name="taxes_included_in_premium"/>
+        <field name="taxes_included_in_premium"/>
+    </xpath>
     <xpath expr="/form/notebook/page[@id='admin']" position="before">
         <page id="billing_modes" string="Billing Modes">
-            <label name="change_billing_modes_order"/>
-            <field name="change_billing_modes_order"/>
-            <newline/>
             <label name="days_offset_for_subscription_payments"/>
             <field name="days_offset_for_subscription_payments"/>
+            <newline/>
+            <label name="change_billing_modes_order"/>
+            <field name="change_billing_modes_order"/>
             <newline/>
             <field name="billing_modes" colspan="4"/>
             <field name="ordered_billing_modes" colspan="4" mode="tree"/>
         </page>
     </xpath>
+
 </data>
