commission_insurance: Display commission rate on commission Fix #1936: https://redmine.coopengo.com/issues/1936 http://rietveld.coopengo.com/14220001

--- a/modules/commission_insurance/view/commission_form.xml
+++ b/modules/commission_insurance/view/commission_form.xml
@@ -7,4 +7,9 @@
         <label name="commissioned_option"/>
         <field name="commissioned_option"/>
     </xpath>
+    <xpath expr="/form/field[@name='amount']" position="after">
+        <newline/>
+        <label name="commission_rate"/>
+        <field name="commission_rate"/>
+    </xpath>
 </data>
