account_payment_cog: Allow to print a report model when rejecting a payment Fix #1945: https://redmine.coopengo.com/issues/1945 http://rietveld.coopengo.com/18000001

--- a/modules/account_payment_cog/view/payment_journal_failure_action_form.xml
+++ b/modules/account_payment_cog/view/payment_journal_failure_action_form.xml
@@ -12,4 +12,6 @@
     <field name="is_fee_required"/>
     <label name="rejected_payment_fee"/>
     <field name="rejected_payment_fee"/>
+    <label name="report_template"/>
+    <field name="report_template"/>
 </form>
