endorsement_insurance_invoice : Allow to select a direct debit account which is not the subscriber's
review http://rietveld.coopengo.com/16090001

--- a/modules/endorsement_insurance_invoice/view/endorsement_billing_information_form.xml
+++ b/modules/endorsement_insurance_invoice/view/endorsement_billing_information_form.xml
@@ -5,8 +5,14 @@
     <newline/>
     <label name="direct_debit_day_selector"/>
     <field name="direct_debit_day_selector"/>
-    <label name="direct_debit_account"/>
-    <field name="direct_debit_account"/>
+    <group id="direct_debit" string="" colspan="2" col="7">
+        <label name="direct_debit_account"/>
+        <field name="direct_debit_account"/>
+        <label name="direct_debit_account_selector"/>
+        <field name="direct_debit_account_selector"/>
+        <label name="search_all_direct_debit_account"/>
+        <field name="search_all_direct_debit_account"/>
+    </group>
     <newline/>
     <label name="payment_term"/>
     <field name="payment_term" widget="selection"/>
