contract_insurance_invoice_dunning: Improve dunning management for contracts Fix #1948: https://redmine.coopengo.com/issues/1948 http://rietveld.coopengo.com/13170002

--- a/modules/contract_insurance_invoice_dunning/view/dunning_level_form.xml
+++ b/modules/contract_insurance_invoice_dunning/view/dunning_level_form.xml
@@ -6,5 +6,7 @@
         <field name="contract_action"/>
         <label name="termination_mode"/>
         <field name="termination_mode"/>
+        <label name="skip_level_for_payment"/>
+        <field name="skip_level_for_payment"/>
     </xpath>
 </data>
