endorsement_insurance_invoice : Filter quotes for propagation, display possible contracts status
Fix #1985
review http://rietveld.coopengo.com/16140001

--- a/modules/endorsement_insurance_invoice/view/contract_displayer_list.xml
+++ b/modules/endorsement_insurance_invoice/view/contract_displayer_list.xml
@@ -2,4 +2,5 @@
 <tree string="Contracts" editable="bottom">
     <field name="to_propagate"/>
     <field name="contract"/>
+    <field name="contract_status"/>
 </tree>
