--- a/modules/bank_cog/view/bank_account_form.xml
+++ b/modules/bank_cog/view/bank_account_form.xml
@@ -7,7 +7,7 @@
         <label name="end_date"/>
         <field name="end_date"/>
     </xpath>
-    <xpath expr="/form/field[@name='bank']" position="after">
+    <xpath expr="/form/label[@name='bank']" position="before">
         <label name="number"/>
         <field name="number"/>
     </xpath>
