endorsement_party_process: Filter endorsement definition - use widget selection https://redmine.coopengo.com/issues/2018 http://rietveld.coopengo.com/14290001

--- a/modules/endorsement_party_process/view/endorsement_party_find_process_form.xml
+++ b/modules/endorsement_party_process/view/endorsement_party_find_process_form.xml
@@ -5,7 +5,7 @@
         <field name="effective_date"/>
         <newline/>
         <label name="definition"/>
-        <field name="definition"/>
+        <field name="definition" widget="selection"/>
         <newline/>
         <label name="party"/>
         <field name="party"/>
