--- a/modules/endorsement_process/view/endorsement_find_process_form.xml
+++ b/modules/endorsement_process/view/endorsement_find_process_form.xml
@@ -5,7 +5,7 @@
         <field name="effective_date"/>
         <newline/>
         <label name="definition"/>
-        <field name="definition"/>
+        <field name="definition" widget="selection"/>
         <newline/>
         <field name="contracts" colspan="4"/>
     </xpath>
