account_cog: New simplified party balance with colors and icons Fix #1852 review: http://rietveld.coopengo.com/18010001/

--- a/modules/account_cog/view/move_line_synthesis_form.xml
+++ b/modules/account_cog/view/move_line_synthesis_form.xml
@@ -15,7 +15,7 @@
     </group>
     <notebook colspan="4">
         <page string="Reconciliation" id="reconciliation">
-            <field name="reconciliation_lines"/>
+            <field name="reconciled_with"/>
         </page>
         <page string="Other Info" id="info">
             <label name="maturity_date"/>
