account_payment_cog: Display information on the invoice if a payment is planned Fix #1839 review: http://rietveld.coopengo.com/8960001/

--- a/modules/account_invoice_cog/view/invoice_list.xml
+++ b/modules/account_invoice_cog/view/invoice_list.xml
@@ -4,4 +4,7 @@
     <xpath expr="/tree/field[@name='type']" position="before">
         <field name="state" icon="icon"/>
     </xpath>
+    <xpath expr="/tree" position="inside">
+        <field name="color" tree_invisible="1"/>
+    </xpath>
 </data>
