--- a/modules/contract_insurance_invoice/view/premium_notice_view_list.xml
+++ b/modules/contract_insurance_invoice/view/premium_notice_view_list.xml
@@ -10,4 +10,5 @@
     <field name="amount_to_pay_today"/>
     <field name="contract"/>
     <field name="reconciliation_date"/>
+    <field name="color" tree_invisible="1"/>
 </tree>
