report_engine: Enable one click printing or mail Fix #1362 review: http://rietveld.coopengo.com/16110001/

--- a/modules/report_engine/view/report_template_form.xml
+++ b/modules/report_engine/view/report_template_form.xml
@@ -12,6 +12,8 @@
     <field name="internal_edm"/>
     <label name="document_desc"/>
     <field name="document_desc"/>
+    <label name="modifiable_before_printing"/>
+    <field name="modifiable_before_printing"/>
     <notebook>
         <page string="Versions" id="versions">
             <field name="versions"/>
