endorsement_set : add state field in list view http://rietveld.coopengo.com/13150001/

--- a/modules/endorsement_set/view/endorsement_set_list.xml
+++ b/modules/endorsement_set/view/endorsement_set_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree>
     <field name="number"/>
+    <field name="state"/>
     <field name="subscribers_summary"/>
     <field name="contracts_summary"/>
     <field name="contracts_endorsements_summary"/>
