process_cog : Allow to add a confirmation message before Completing a process
Fix #2062
review http://rietveld.coopengo.com/13190001

--- a/modules/process_cog/view/process_form.xml
+++ b/modules/process_cog/view/process_form.xml
@@ -16,5 +16,7 @@
         <field name="with_prev_next"/>
         <label name="close_tab_on_completion"/>
         <field name="close_tab_on_completion"/>
+        <label name="complete_message"/>
+        <field name="complete_message"/>
     </xpath>
 </data>
