loan: Display loan number within contract even on non stored loan Fix #1944

--- a/modules/loan/view/loan_form_patch.xml
+++ b/modules/loan/view/loan_form_patch.xml
@@ -3,6 +3,8 @@
     <xpath expr="/form//label[@id='main_view_placeholder']" position="replace">
         <label name="number"/>
         <field name="number"/>
+        <label name="order"/>
+        <field name="order"/>
         <label name="company"/>
         <field name="company"/>
         <label name="kind"/>
