--- a/modules/premium/view/contract_fee_list.xml
+++ b/modules/premium/view/contract_fee_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<tree string="Contract Fees" editable="bottom">
+<tree string="Contract Fees">
     <field name="accept_fee"/>
     <field name="rec_name"/>
     <field name="amount_as_string"/>
