endorsement_party : name change is multi-party, fix #1992 http://rietveld.coopengo.com/18110001/

--- a/modules/endorsement_party/view/endorsement_definition_form.xml
+++ b/modules/endorsement_party/view/endorsement_definition_form.xml
@@ -6,5 +6,8 @@
         <label name="definition_for_contracts"/>
         <field name="definition_for_contracts"/>
         <field name="is_party" invisible="1"/>
+        <newline/>
+        <label name="is_multi_instance"/>
+        <field name="is_multi_instance"/>
     </xpath>
 </data>
