event_log: use object rec_name as default event description
fix #2184 :'Events log: use object rec_name as default event description'
http://rietveld.coopengo.com/17180001

--- a/modules/event_log/view/event_log_list.xml
+++ b/modules/event_log/view/event_log_list.xml
@@ -4,5 +4,5 @@
     <field name="user"/>
     <field name="event_type"/>
     <field name="object_"/>
-    <field name="description"/>
+    <field name="description_str"/>
 </tree>
