--- a/modules/event_log/view/event_log_form.xml
+++ b/modules/event_log/view/event_log_form.xml
@@ -8,6 +8,6 @@
     <field name="event_type"/>
     <label name="object_"/>
     <field name="object_"/>
-    <label name="description"/>
-    <field name="description" colspan="3"/>
+    <label name="description_str"/>
+    <field name="description_str" colspan="3"/>
 </form>
