--- a/modules/premium/view/contract_form.xml
+++ b/modules/premium/view/contract_form.xml
@@ -8,4 +8,7 @@
     <xpath expr="/form/group[@id='button_change_start_date']" position="inside">
         <button string="Display Premium" name="button_display_premium"/>
     </xpath>
+    <xpath expr="/form" position="inside">
+        <field name="show_premium" invisible="1"/>
+    </xpath>
 </data>
