contract_insurance: improve premium_amount_list and extra_premium_list views
fix #1458 :'Echeancier de quittances - Vue des lignes surprimes'
http://rietveld.coopengo.com/11540001

--- a/modules/contract_insurance/view/extra_premium_list.xml
+++ b/modules/contract_insurance/view/extra_premium_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Extra Premium">
-    <field name="rec_name"/>
+    <field name="value_as_string"/>
     <field name="motive"/>
     <button string="Propagate" name="propagate"/>
 </tree>
