--- a/modules/contract_loan_invoice/view/premium_amount_list.xml
+++ b/modules/contract_loan_invoice/view/premium_amount_list.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0"?>
 <tree string="Premium Amounts">
-    <field name="premium"/>
-    <field name="contract"/>
     <field name="start"/>
     <field name="end"/>
+    <field name="covered_element"/>
+    <field name="type_"/>
+    <field name="loan"/>
+    <field name="premium"/>
     <field name="amount"/>
     <field name="tax_amount"/>
 </tree>
