contract : add sub_status to option fix #2233 http://rietveld.coopengo.com/12600001/

--- a/modules/endorsement_insurance/view/remove_option_form.xml
+++ b/modules/endorsement_insurance/view/remove_option_form.xml
@@ -4,5 +4,5 @@
     <field name="endorsement_part"/>
     <label name="endorsement_definition"/>
     <field name="endorsement_definition"/>
-    <field name="options" no_command="1" mode="tree" colspan="4"/>
+    <field name="options" no_command="1" mode="tree,form" colspan="4"/>
 </form>
